--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,6 +110,7 @@
                         android:textColor="#B71C1C"
                         android:textSize="15sp" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/register_phone"
                     android:layout_width="match_parent"
@@ -257,27 +258,39 @@
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtView3"
-                    android:layout_width="173dp"
-                    android:layout_height="28dp"
-                    android:layout_marginBottom="18dp"
-                    android:text="@string/already_registered"
-                    android:textAlignment="center"
-                    android:textColor="#FBFBFB"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textSingIn"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="Login"
-                    android:text="@string/sign_in"
-                    android:textAlignment="center"
-                    android:textColor="@color/red"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="30dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_15dp"
+                        android:layout_marginBottom="18dp"
+                        android:text="@string/already_registered"
+                        android:textAlignment="center"
+                        android:textColor="#FBFBFB"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textSingIn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="@dimen/margin_15dp"
+                        android:onClick="Login"
+                        android:text="@string/sign_in"
+                        android:textAlignment="center"
+                        android:textColor="@color/red"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
