--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#f9a825</color>
-    <color name="color_selected_bottom_nav">#f9a825</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="color_selected_bottom_nav">#ED980E</color>
     <color name="colorAccent">#EEEEEE</color>
     <color name="backgroungColor">#f5f5f5</color>
     <color name="cardBorderColor">#dedede</color>
